2005-05-02  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/Makefile.am, Atlas/Objects/flag.cpp: Store the
	  date in flag.cpp to make sure its modified mtime gets commited
	  to cvs each time it is updated.

2005-05-01  Al Riddoch  <alriddoch@zepler.org>

	* NEWS: Update NEWS from transitional branch.

	* tests/Objects/Makefile.am, tests/Objects/objects2.cpp,
	  tests/Objects/DebugBridge.h: Include required DebugBridge
	  class in the tests dir.

	* tutorial/Makefile.am, tutorial/example/COPYING,
	  tutorial/example/autogen.sh: Include the tutorial example in
	  the distribution.

2005-04-28  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version to 0.5.95 as the API has now
	  changed. Many cleanups.

2005-04-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/Decoder.cpp, Atlas/Objects/Decoder.h,
	  Atlas/Objects/GenerateDecoder.py: Modify decoder so it
	  has a pointer to a Factories instance, which is by default the
	  global shared instance.

2005-04-28  Al Riddoch  <alriddoch@zepler.org>

	* Anonymous.cpp, Anonymous.h, Decoder.cpp, Decoder.h, Dispatcher.cpp,
	  Dispatcher.h, Entity.h, ObjectsFwd.h, Operation.h, Root.cpp, Root.h,
	  RootEntity.cpp, RootEntity.h, RootEntityChildren.cpp,
	  RootOperation.cpp, RootOperation.h, RootOperationChildren1.cpp,
	  RootOperationChildren2.cpp, RootOperationChildren3.cpp,
	  RootOperationChildren4.cpp, RootOperationChildren5.cpp,
	  flag.cpp, objectFactory.cpp: Check in generated files to make it
	  easier for people to track latest changes.

2005-04-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/AttributeInfo.py: Fix the test on empty parents so
	  it uses the defaults for the instance, not the defaults for the
	  Root class.

2005-04-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/objectFactory.h,
	  Atlas/Objects/GenerateObjectFactory.py: Make Factories an singleton
	  and get rid of the static instance. Add constructors to ensure
	  it can be copied correctly.
