@@ -54,11 +54,8 @@ public:
         return m_factories;
     }
 protected:
-    /// Overridden by Objects::Decoder to retrieve the object.
+    /// Overridden by to retrieve the message from DecoderBase.
     virtual void messageArrived(const Atlas::Message::MapType&);
-
-    /// An unknown object has arrived.
-    virtual void unknownMessageArrived(const Atlas::Message::Element&);
 
     /// call right object*Arrived method
     virtual void objectArrived(const Root& obj) = 0;
@@ -99,10 +96,6 @@ void ObjectsDecoder::messageArrived(const Atlas::Message::MapType& o)
 {
     Root obj = m_factories->createObject(o);
     objectArrived(obj);
-}
-
-void ObjectsDecoder::unknownMessageArrived(const Atlas::Message::Element&)
-{
 }
 
 """) #"for xemacs syntax highlighting
